<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mychef.mychef.ui.SignUpActivity"
    android:id="@+id/signUpContainer"
    android:padding="0dp"
    android:background="@android:color/holo_blue_light">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reenterPasswordField"
        android:hint="@string/reenter_password_hint"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_centerInParent="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailField"
        android:layout_below="@+id/reenterPasswordField"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_field_help"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordField"
        android:hint="@string/password_field_hint"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/reenterPasswordField" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        android:layout_centerHorizontal="true"
        android:hint="@string/username_field_hint"
        android:layout_above="@+id/passwordField"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameField"
        android:layout_below="@+id/emailField"
        android:layout_centerHorizontal="true"
        android:hint="@string/name_field_hint"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logoImage"
        android:background="@drawable/common_signin_btn_text_pressed_dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motto_text"
        android:id="@+id/mottoText"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/motto_text_size"
        android:textColor="@android:color/white"
        android:paddingBottom="5dp"
        android:layout_above="@+id/usernameField" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text"
        android:id="@+id/signUpButton"
        android:textSize="20sp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="false" />

</RelativeLayout>
