<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mychef.mychef.ui.ChefOrEaterActivity"
    android:background="@drawable/ic_launcher">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chef_or_eater_center_text"
        android:id="@+id/centerText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="30sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chef_or_eater_eater_text"
        android:id="@+id/chefButton"
        android:layout_above="@+id/centerText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chef_or_eater_chef_text"
        android:id="@+id/eaterButton"
        android:layout_below="@+id/centerText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chef_or_eater_eater_label"
        android:id="@+id/chefText"
        android:layout_above="@+id/chefButton"
        android:layout_centerHorizontal="true"
        android:paddingBottom="5dp"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chef_or_eater_chef_label"
        android:id="@+id/eaterText"
        android:layout_below="@+id/eaterButton"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chefOrEaterLogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/common_signin_btn_text_pressed_dark" />
</RelativeLayout>
